--- a/Samples/MultipleViews/cs/MultipleViews.csproj
+++ b/Samples/MultipleViews/cs/MultipleViews.csproj
@@ -107,6 +107,9 @@
     <Compile Include="SecondaryViewPage.xaml.cs">
       <DependentUpon>SecondaryViewPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ViewLifetimeControl.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -142,6 +145,10 @@
     </Page>
     <Page Include="..\..\..\SharedContent\xaml\Styles.xaml">
       <Link>Styles\Styles.xaml</Link>
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="SettingsPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
